# ESP32-IDF-HTTP-Server

./: .gitignore  CMakeLists.txt  README.md  pytest_esp_http_client.py  simple_server.py
main/: CMakeLists.txt  app_init.c  app_init.h  esp32_http_client.c  esp32_http_client.h  esp_http_client_example.c  hello_world_app.c  hello_world_app.h  hello_world_main.c  http_hello_client.c  http_hello_client.h  main.c  main_new.c
main/config/: esp32-config.h
main/drivers/: http_driver.h  wifi_driver.h
main/tasks/: hello_world_task.h  wifi_task.h
